complete card section

--- a/index.html
+++ b/index.html
@@ -514,5 +514,235 @@
                     </div>
                 </div>
     </div>
+    <div>
+        <div class="p-20">
+            <h1 class="text-4xl font-bold mb-3 text-center">Das sagen unsere Kunden</h1>
+            <p class="text-center">Unternehmen wie Ihres vertrauen bereits auf Hostprofis</p>
+        </div>
+        <div class="flex">
+            <div class="ml-10">
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Früher hatten unsere Kunden nur unsere privaten Handynummern. Jetzt erreichen sie eine professionelle automatische Zentrale, die sie direkt zum richtigen Ansprechpartner weiterleitet"</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/michelle-menger.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Michelle Menger
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Keine Überraschungsrechnungen oder hohe Wartungskosten mehr. Wir zahlen jeden Monat einen festen Betrag, und Hostprofis kümmert sich um alles."</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/ben-diemberger.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Ben Diemberger
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-79">"Keine verpassten Anrufe mehr, kein Chaos mit Mobiltelefonen – alles funktioniert wie ein großes Unternehmenssystem."</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/martina-bogen.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Martina Bogen
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Das Beste? Keine Koordination mehr zwischen verschiedenen Anbietern, wenn etwas schiefgeht. Ein Anruf bei Hostprofis, und alles ist geregelt – für einen Bruchteil der Kosten, die wir früher hatten."</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/aaron-mesmer.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Aaron Mesmer
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="ml-10">
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-80">"Wir haben jährlich €3.000 nur für Wartung bezahlt. Mit Hostprofis konnten wir unsere Telefonkosten um 55 % senken und alles funktioniert reibungslos!"</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/jonathan-brendel.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Jonathan Brendel
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Als kleines Unternehmen wollten wir professioneller wirken. Die automatischen Begrüßungen und die Anrufweiterleitung begeistern unsere Kunden!"</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/kilian-kollek.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Kilian Kollek
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-79">"Unser altes System hat uns ein Vermögen für Wartung und Mobilfunkkosten gekostet. Jetzt haben wir bessere Funktionen für die Hälfte der Kosten!"</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/natalie-mateschitz.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Natalie Mateschitz
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Als unser ISDN gekündigt wurde, brauchten wir schnell eine zukunftssichere Lösung. Hostprofis hat sich um alles gekümmert – absolut TOP!"</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/tim-dorn.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Tim Dorn
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                  <div class="ml-10 pb-10">
+                <div class="border-1 border-yellow-500 w-100 rounded-lg  p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-78">“Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis hat unser neues System in nur 14 Tagen eingerichtet, Keine Ausfallzeit, kein Stress!”</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/gregor-zeisl.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Gregor Zeisl
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Ich hatte Angst vor der ISDN-Umstellung, nachdem unser Anbieter uns €4.631 in Rechnung stellen wollte. Hostprofis hat alles für eine einfache monatliche Gebühr ohne zusätzliche Kosten erledigt."</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/matheo-cella.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                               Matheo Cella
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Unsere Kunden merken nicht, ob wir im Büro oder unterwegs sind. Das System lässt unser kleines Team wie eine viel größere Organisation wirken."</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/oliver-makart.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Oliver Makart
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="w-75">"Ich war echt nervös wegen dem Wechsel. Aber Hostprofis hat alles organisiert und unser Team an einem Nachmittag geschult."</p>
+                    <div class="flex mt-5 pb-5">
+                        <img src="/img/eva-breuer.png" alt="">
+                        <div class="ml-3">
+                            <p class="font-bold">
+                                Eva Breuer
+                            </p>
+                            <div class="flex">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                                <img src="/img/star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+</div>
 </body>
 </html> 
