--- a/index.html
+++ b/index.html
@@ -744,5 +744,108 @@
             </div>
     </div>
 </div>
+<div class="bg-[#FAF7EB] flex">               
+    <div class="ml-10 pt-10">
+        <h2 class="text-4xl font-bold w-90">Häufig gestellte Fragen</h2>
+        <p class="w-80 mt-3">Brauchen Sie mehr Informationen? Hier finden Sie die Antworten.</p>
+    </div>
+    <div class="pb-10">
+        <div class="border-1 border-yellow-500 rounded-lg p-10 ml-30 mt-10 mr-10">
+            <h1 class="text-2xl font-bold">Was ist die Cloud-Telefonie von Hostprofis?</h1>
+            <p class="w-165 mt-2">Eine komplette Telefonanlage für Unternehmen, die über das Internet funktioniert. Sie bietet alle Funktionen eines klassischen Telefonsystems und zusätzlich moderne Features wie mobile Apps und Videotelefonie – alles betreut von einem lokalen österreichischen Team.</p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Brauche ich spezielle Telefone oder Geräte?
+                <i class="fa-solid fa-plus ml-100 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3 ">
+                Kann ich meine bestehenden Telefonnummern behalten?                
+                <i class="fa-solid fa-plus ml-75 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Kann ich das System im Homeoffice nutzen?
+                <i class="fa-solid fa-plus ml-100 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Wie viel kostet das?
+                <i class="fa-solid fa-plus ml-145 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Gibt es Einrichtungsgebühren?
+                <i class="fa-solid fa-plus ml-123 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Wie lange dauert die Einrichtung?
+                <i class="fa-solid fa-plus ml-117 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Wo werden meine Daten gespeichert?
+                <i class="fa-solid fa-plus ml-110 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Wie lernen meine Mitarbeiter, das System zu nutzen?
+                <i class="fa-solid fa-plus ml-82 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Welchen Support bieten Sie?
+                <i class="fa-solid fa-plus ml-127 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Wo sitzt Ihr Support-Team?
+                <i class="fa-solid fa-plus ml-130 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+               Was, wenn ich Änderungen an meinem System brauche?
+                <i class="fa-solid fa-plus ml-75 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+                Kann ich das System mit meinem CRM integrieren?
+                <i class="fa-solid fa-plus ml-85 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
+            <p class="font-bold p-3">
+               Welche Internetgeschwindigkeit brauche ich?
+                <i class="fa-solid fa-plus ml-95 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10 ">
+            <p class="font-bold p-3">
+                Was passiert, wenn mein Internet ausfällt?
+                <i class="fa-solid fa-plus ml-102 border-2 border-black rounded-full p-1"></i>
+            </p>
+        </div>
+    </div>
+</div>
+<footer class="bg-black flex p-5">
+    <a href="#" class="text-[#CFCFCF] ml-20 mt-3">© 2025 HostProfis ISP Telekom GmbH</a>
+    <img src="/img/footer-logo.png" alt="" class="ml-50">
+    <p class="text-white ml-40 mt-3">Impressum</p>
+    <p class="text-white ml-5 mt-3">AGB</p>
+    <p class="text-white ml-5 mt-3">Datenschutz</p>
+</footer>
 </body>
 </html> 
