--- a/index.html
+++ b/index.html
@@ -91,13 +91,16 @@
               />
             </div>
           </div>
-          <div class="px-3">
-            <p>Wie viele Mitarbeiter hat Ihr Unternehmen?</p>
-            <input
-              type="number"
-              class="border-2 border-gray-300 rounded-full p-2 mb-4 w-[466px] pr-15"
-              placeholder="Anzahl der Mitarbeiter"
-            />
+          <div class="px-3 ">
+            <p class="pb-3">Wie viele Mitarbeiter hat Ihr Unternehmen?</p>
+            <label class=" bg-white border-2 border-gray-300 rounded-full p-3 mb-4 pr-5 text-[#344054] w-[466px] text-gray-400">Anzahl der Mitarbeiter
+            <select class=" ml-57"> 
+                <option ></option>
+                <option >2</option>
+                <option >3</option>
+                <option >4</option>
+            </select>
+            </label>
           </div>
           <div class="mt-5 grid grid-cols- px-3">
             <button
