--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
         </div>
     </div>
-    <form class="bg-[#FAF3EB] border-1 border-yellow-400 rounded-lg p-5 md:w-[530px] mt-8">
+    <form class="bg-[#FAF3EB] border-1 border-yellow-400 rounded-lg p-5 md:w-[530px] my-8">
         <h1 class="text-2xl md:text-4xl font-bold w-[291px] w-full text-center">Jetzt 100% kostenlos und unverbindlich beraten lassen!</h1>
         <div class="md:flex px-3 pt-8 gap-3">
             <div class="w-[227px]">
@@ -91,14 +91,11 @@
                 placeholder="+43 123456789"
               />
             </div>
-          </div>
-
-
-        
-          <div class=" px-3 md:w-[466px]">
+          </div>        
+          <div class="  md:w-[466px]">
             <label for="select">Wie viele Mitarbeiter hat Ihr Unternehmen?</label>
-            <div class="border-2 border-gray-300 rounded-full text-center">
-            <select name="select" class=" m-4 pr-5 text-[#344054] text-gray-400"> 
+            <div class="border-2 border-gray-300 rounded-full text-center ">
+            <select name="select" class=" p-3 px-2 text-[#344054] text-gray-400"> 
                 <option value="0">Wählen Sie die Anzahl Ihrer Mitarbeiter</option>
                 <option value="1">1</option>
             </select>
@@ -107,12 +104,12 @@
           <div class="mt-5 ">
             <div>
                 <button
-              class="md:w-[466px] bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200"
+              class="md:w-[466px] bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200 w-ful" 
             >
               Jetzt Kostenlos Beraten Lassen
             </button>
             </div>
-            <div class=" text-gray-500 flex text-center items-center">
+            <div class=" text-gray-500 flex justify-center mt-3">
                 <a href="#">
               <i class="fa-solid fa-lock mr-2"></i>Ihre Daten sind sicher
               – Keine Werbung!</a
@@ -128,9 +125,9 @@
           </div>
     </form>
     </div>
-     <div class="bg-[#FAF7EB] p-10">
-        <strong class="ml-125">Die #1 bei 40.000+ Unternehmen</strong>
-        <div class="flex mt-5 ml-10">
+     <div class="bg-[#FAF7EB] p-10 text-center">
+        <strong class="">Die #1 bei 40.000+ Unternehmen</strong>
+        <div class="md:flex mt-5 grid grid-cols-3">
             <img src="/img/fujitsu.png" alt="" >
             <img src="/img/berndorf.png" alt="">
             <img src="/img/aelmam.png" alt="">
@@ -142,23 +139,23 @@
             <img src="/img/panalpina.png" alt="">
         </div>
     </div>
-    <div class="px-20 py-[76px]">
-        <h1 class="text-center font-bold text-3xl mt-10 mb-5">
+    <div class="md:px-20 py-[76px] px-6">
+        <h1 class="md:text-center font-bold text-3xl mt-10 mb-5">
             Ihre komplette Cloud Telefonanlage schon ab €14,90 pro Nutzer
         </h1>
-        <p class="w-200 text-center mx-auto mb-10">
+        <p class="md:px-[180px] md:text-center md:mb-10">
             Sie erhalten alle <strong>Premium-Funktionen einer Enterprise-Telefonanlage,</strong> kombiniert mit <strong>maximaler Benutzerfreundlichkeit</strong> und das zu einem <strong>Bruchteil der Kosten.</strong> Wir kümmern uns um den perfekten Start und den reibungslosen Betrieb – Sie genießen modernste Kommunikationstechnik ohne komplizierte Installation.
         </p>
     </div>
-    <div class="flex px-[62px] pt-20">
-        <div class="border-2 border-yellow-500 rounded-lg ml-20">
+    <div class="md:flex md:px-[62px] md:pt-20 px-6 w-full">
+        <div class="border-2 border-yellow-500 rounded-lg ">
             <img src="/img/group-img.png" alt="">
         </div>
-        <div class="px-6 w-[531px]">
-            <h2 class="text-3xl font-bold mt-10  w-120 mb-10">
+        <div class=" md:w-[531px] ml-3">
+            <h2 class="md:text-3xl text-2xl font-bold mt-10  md:w-120 mb-10">
                 Keine IT-Kopfschmerzen beim Wechsel in die Cloud
             </h2>
-            <p class="pr-10">Wir übernehmen den gesamten Umstieg von der alten Telefonanlage in die Cloud für Sie. <strong>Schnell, einfach und kostenlos.</strong></p>
+            <p class="md:pr-10">Wir übernehmen den gesamten Umstieg von der alten Telefonanlage in die Cloud für Sie. <strong>Schnell, einfach und kostenlos.</strong></p>
             <div class="mt-6">
                 <div class="flex gap-2">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
@@ -175,11 +172,11 @@
             </div>
         </div>
     </div>
-    <hr class="my-[116px] mx-[150px] border-gray-200">
-    <div class="flex px-[62px] pt-20">
-        <div class=" w-[531px] ml-20 mt-10">
-            <h1 class=" text-3xl font-bold">Persönlicher und regionaler Support aus Österreich</h1>
-            <p class="mr-13 mt-[18px]">Wir sind ein österreichisches Unternehmen mit Standorten in allen Bundesländern. Sie erreichen uns jederzeit – und bei dringenden Fällen sind wir blitzschnell vor Ort!</p>
+    <hr class="md:my-[116px] md:mx-[150px] border-gray-200">
+    <div class="md:flex md:px-[62px] px-5 pt-20">
+        <div class="md:w-[531px] md:ml-20 mt-10 w-full sm:order-2">
+            <h1 class=" md:text-3xl text-2xl font-bold">Persönlicher und regionaler Support aus Österreich</h1>
+            <p class="md:mr-13 mt-[18px]">Wir sind ein österreichisches Unternehmen mit Standorten in allen Bundesländern. Sie erreichen uns jederzeit – und bei dringenden Fällen sind wir blitzschnell vor Ort!</p>
                 <div class="mt-6">
                 <div class="flex gap-2">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
@@ -195,7 +192,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="sm-px6 sm:order-1">
             <img src="./img/laptop-img .png" alt="">
         </div>
     </div>
